crates/ink/tests/ui/trait_def/fail/message_async_invalid.stderr
error: async ink! trait methods are not supported
 --> tests/ui/trait_def/fail/message_async_invalid.rs:4:5
  |
4 |     async fn message_ref(&self);
  |     ^^^^^
